Other-272006 Upgrade SQLcl to fresh version  Other-272006-248696 [CR] [BUG] SCMDB started failing during DDL generation after SQLcl upgrade